fix: colors page alignment

--- a/app/colors/color-picker.css
+++ b/app/colors/color-picker.css
@@ -1,3 +1,7 @@
+#color-picker-section {
+  margin-top: 1rem;
+}
+
 .woh___settings-page {
   width: 100vw;
 }
