--- a/app/colors/page.css
+++ b/app/colors/page.css
@@ -1,7 +1,7 @@
 .woh__settings-page {
   margin-top: 3rem;
   width: 100%;
-  height: 100%;
+  min-height: 70dvh;
   display: flex;
   justify-content: center;
 
